# TaskMover_3.0-Rebirth-

./: .coverage  .gitignore  .pre-commit-config.yaml  BUG_FIXES_SUMMARY.md  BUILD_FIX_SUMMARY.md  BUILD_SUMMARY.md  BUILD_SYSTEM_UPDATES.md  CHANGELOG.md  DOCUMENTATION.md  FINAL_IMPLEMENTATION_COMPLETE.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  PHASE1_IMPLEMENTATION_GUIDE.md  PHASE7_COMPLETE.md  PROGRESS_DIALOG_FIX.md  README.md  RELEASE_SUMMARY.md  RULESET_IMPLEMENTATION_SUMMARY.md  RULE_UI_IMPLEMENTATION_SUMMARY.md  SCRIPTS_DOCUMENTATION.md  TaskMover.spec  app.spec  cleanup_workspace.bat  cleanup_workspace.sh  demo_logging.py  fix_examples.py  fix_fonts.py  fix_nav_fonts.py  launch_test_gui.bat  logging_config.yml  main.py  pyproject.toml  pyproject_lint.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_interactive_tests.bat  run_tests.bat  run_tests.py  setup_dev_env.bat  (+22 more)
.cleanup_backup/20252306_205931/: IMPLEMENTATION_PLAN.md  run_gallery.bat  run_tests.bat
.github/: BUILD_INSTRUCTIONS.md  TaskMover.spec
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: Claude.prompt.md
.github/scripts/: checklist_to_issue.py
.github/workflows/: Label and Milestone for TODO Issues  build-windows-exe.yml  checklist-to-issue.yml  ci.yml  todo-to-issue  todo-to-issue.yml
docs/: API_REFERENCE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDEX.md  MIGRATION_COMPLETE.md  PATTERN_INTEGRATION_COMPLETE.md  PROGRAMMING_COURSES.md  README.md  Storage_Framework_Documentation.md  TEST_GUI_CONCEPT.md  TEST_GUI_IMPLEMENTATION.md  TODO.md  USER_GUIDE.md  WORKSPACE_ORGANIZATION.md  test_action.md
docs/Architechture/: Architecture_design_v1  Architecture_design_v1.md  ConflictResolution.md  DEVELOPMENT_ROADMAP.md  FileOperations.md  LoggingSystem.md  LoggingSystem_TODO.md  PatternSystem.md  PatternSystem_BACKEND_COMPLETE.md  PatternSystem_OLD_Checklist.md  PatternSystem_TODO.md  PatternSystem_TechnicalSpecification_v3.md  RuleSystem.md  RulesetSystem.md  SettingsManagement.md  StoragePersistence.md  UIComponents.md  UI_Component_Reference.md  UI_Implementation_Plan.md
docs/development/: BUILD_INSTRUCTIONS.md  BUILD_INSTRUCTIONS_NEW.md  BUILD_SUMMARY.md  TESTING.md
docs/features/: CONFIGURATION.md  PROPORTIONAL_WINDOWS.md  RULESET_MANAGEMENT.md  WINDOW_MANAGEMENT.md
docs/technical/: ARCHITECTURE.md  CLEANUP_SUMMARY.md  WORKSPACE_CLEANUP_SUMMARY.md
legacy/documentation/: README_old.md  REDESIGN_STATUS.md  UI_FEATURES.md
legacy/scripts/: run_redesigned.py  ui_prototype.py
legacy/taskmover/: __init__.py  app.py  app_redesigned.py  center_window.py  config.py  file_operations.py  logging_config.py  logging_config.py.new  pattern_grid_helpers.py  rule_manager.py  (+9 more)
patterns/: patterns.yaml
taskmover/: __init__.py  __main__.py  app.py  config.py  debug_config.py  file_operations.py  logging_config.py  pattern_grid_helpers.py  rule_operations.py  shared.py  theme_manager.py  ui_button_helpers.py  ui_developer_helpers.py  ui_helpers.py  ui_rule_helpers.py  ui_rule_helpers_fixed.py  ui_settings_helpers.py  utils.py
taskmover_redesign/: __init__.py  __main__.py  app.py
tests/: __init__.py  conftest.py  modern_test_gui.py  professional_test_runner.py  simple_test_gui.py  test_app.py  test_demo.py  test_file_operations.py  test_gui_runner.py  test_ui.py  test_utils.py  testcases.json
(+197 files in other folders)
